dist/linkwarden/Deployment.linkwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: linkwarden-app-linkwarden-app-deployment-c8e43dae
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: pvc-linkwarden-app-data
      labels:
        cdk8s.io/metadata.addr: linkwarden-app-linkwarden-app-deployment-c8e43dae
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: NEXTAUTH_URL
              value: https://bookmarks.cmdcentral.xyz/api/v1/auth
            - name: NEXTAUTH_SECRET
              valueFrom:
                secretKeyRef:
                  key: NEXTAUTH_SECRET
                  name: secrets
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  key: DATABASE_URL
                  name: secrets
            - name: NEXT_PUBLIC_DISABLE_REGISTRATION
              value: "true"
            - name: NEXT_PUBLIC_AUTHENTIK_ENABLED
              value: "true"
            - name: AUTHENTIK_CUSTOM_NAME
              value: Cmdcentral Login
            - name: AUTHENTIK_ISSUER
              value: https://login.cmdcentral.xyz/application/o/linkwarden
            - name: AUTHENTIK_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: AUTHENTIK_CLIENT_ID
                  name: secrets
            - name: AUTHENTIK_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: AUTHENTIK_CLIENT_SECRET
                  name: secrets
          image: ghcr.io/linkwarden/linkwarden
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          name: linkwarden
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data/data
              name: pvc-linkwarden-app-data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-linkwarden-app-data
          persistentVolumeClaim:
            claimName: linkwarden-app-data
            readOnly: false
