dist/linkwarden/Service.linkwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
spec:
  externalIPs: []
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: linkwarden-app-linkwarden-app-deployment-c8e43dae
  type: ClusterIP
