dist/linkwarden/Ingress.linkwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: linkwarden
  namespace: linkwarden
spec:
  rules:
    - host: linkwarden.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 3000
            path: /
            pathType: Prefix
    - host: bookmarks.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - linkwarden.cmdcentral.xyz
        - bookmarks.cmdcentral.xyz
      secretName: linkwarden-tls
